# autobot

./: .gitignore  DEPLOYMENT.md  DOCUMENTATION.md  NEXT_STEPS.md  README.md  ROADMAP.md  TOOL_REVIEW.md  UI_DESIGN_GUIDE.md  USE_CASES.md  VISION.md  WAIT_TIMES.md  autobot.spec  backend.Dockerfile  build_desktop.sh  comparative_architecture_analysis.md.resolved  docker-compose.yml  file_list.txt  file_list_cmd.txt  package-lock.json  pyproject.toml  requirements.txt  start.bat  start.sh  status.json  test_agent_real.py  test_mission.py  test_native.py  test_new_architecture.py  test_out.txt
.claude/: settings.json
autobot/: __init__.py  autonomy.py  benchmark.py  browser_agent.py  cli.py  engine.py  focus_manager.py  knowledge.json  knowledge_base.py  llm_brain.py  load_waits.json  main.py  organize_runs.py  planner.py  run_stress.py  ui.py  workflows.py
autobot/adapters/: __init__.py  anydesk.py  base.py  chatgpt_web.py  claude_web.py  excel_desktop.py  google_docs_web.py  grok_web.py  instagram_web.py  kaggle_web.py  leetcode_web.py  manager.py  ncbi_blast_web.py  notepad_desktop.py  overleaf_web.py  vscode_desktop.py  whatsapp_web.py  word_desktop.py
autobot/agent/: __init__.py  approval.py  archetypes.py  background_runner.py  brain.py  evaluator.py  human_gate.py  judge.py  loop.py  message_bus.py  mission.py  mission_agent.py  models.py  orchestrator.py  planner.py  resource_manager.py  runner.py  scheduler.py  stop_condition.py
autobot/browser/: __init__.py  launcher.py
autobot/computer/: __init__.py  anti_sleep.py  browser.py  clipboard.py  computer.py  display.py  files.py  kaggle_tool.py  keyboard.py  mouse.py  research_tool.py  terminal.py  vault.py  (+1 more)
extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js  styles.css
frontend/: .env.example  Dockerfile  README.md  index.html  metadata.json  package.json  refactor_styles.py  typescript_errors.txt  vercel.json  vite.config.ts
tests/: test_anti_sleep.py
tmp/: check_backend.py
(+47 files in other folders)
